Tests/test_output/Aux_Functions/test_fast_conv.txt
WARNING: package sun.awt.X11 not in java.desktop
WARNING: package sun.awt.X11 not in java.desktop

ERROR: Undefined function 'spm_smooth' for input arguments of type 'double'.

Error in test_fast_conv (line 22)
spm_smooth(lat_data, smoothed_spm, FWHM);
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
Error in run (line 112)
evalin('caller', strcat(scriptStem, ';'));
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

STATUS: FAIL
